Eliminacion de Bootstrap y creacion de estilos en ViewTablas

--- a/act_Application/Views/ActMultas/Delete.cshtml
+++ b/act_Application/Views/ActMultas/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Porcentaje)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IdAportacion)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IdAportacion)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
