--- a/act_Application/Views/ActMultas/Index.cshtml
+++ b/act_Application/Views/ActMultas/Index.cshtml
@@ -1,24 +1,33 @@
 ﻿@model IEnumerable<act_Application.Models.ActMulta>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Multas";
 }
-
-<h1>Index</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/tabla.css" />
+</head>
+<h1>Multas</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a class ="button create" asp-action="Create">Crear Nuevo Registro</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IdUser)
+                Id del Usuario
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Porcentaje)
+                Porcentaje de Multa %
             </th>
-            <th></th>
+            <th>
+                Id de la Aportacion
+            </th>
+            <th>
+                Acciones
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -31,9 +40,11 @@
                 @Html.DisplayFor(modelItem => item.Porcentaje)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-light">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-warning">Delete</a>
+                @Html.DisplayFor(modelItem => item.IdAportacion)
+            </td>
+            <td>
+                    <a class="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
