--- a/act_Application/Views/ActAportaciones/Index.cshtml
+++ b/act_Application/Views/ActAportaciones/Index.cshtml
@@ -1,33 +1,39 @@
 ﻿@model IEnumerable<act_Application.Models.ActAportacione>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Aportaciones";
 }
-
-<h1>Index</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/tabla.css" />
+</head>
+<h1>Aportaciones</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a class="button create" asp-action="Create">Crear Nuevo Registro</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Valor)
+                Valor
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdUser)
+                Id del Usuario
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaAportacion)
+                Fecha de la Aportacion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Aprobacion)
+                Aprobacion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CapturaPantalla)
+                Captura de Pantalla
             </th>
-            <th></th>
+            <th>
+                Acciones
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -49,9 +55,8 @@
                 @Html.DisplayFor(modelItem => item.CapturaPantalla)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-light">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-warning">Delete</a>
+                    <a class ="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
