--- a/act_Application/Views/ActMultas/Details.cshtml
+++ b/act_Application/Views/ActMultas/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Porcentaje)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IdAportacion)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IdAportacion)
+        </dd>
     </dl>
 </div>
 <div>
