--- a/act_Application/Views/ActMultas/Edit.cshtml
+++ b/act_Application/Views/ActMultas/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Porcentaje" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IdAportacion" class="control-label"></label>
+                <input asp-for="IdAportacion" class="form-control" />
+                <span asp-validation-for="IdAportacion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
