--- a/act_Application/Views/ActRols/Index.cshtml
+++ b/act_Application/Views/ActRols/Index.cshtml
@@ -1,29 +1,39 @@
 ﻿@model IEnumerable<act_Application.Models.ActRol>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Roles";
 }
-
-<h1>Index</h1>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/tabla.css" />
+</head>
+<h1>Roles</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a class="button create" asp-action="Create">Crear Nuevo Registro</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.NombreRol)
+                Id del Rol
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DescripcionRol)
+                Nombre del Rol
             </th>
-            <th></th>
+            <th>
+                Descripcion del Rol
+            </th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NombreRol)
             </td>
@@ -31,9 +41,8 @@
                 @Html.DisplayFor(modelItem => item.DescripcionRol)
             </td>
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-light">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-warning">Delete</a>
+                    <a class="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                    <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
