--- a/act_Application/wwwroot/css/navBar.css
+++ b/act_Application/wwwroot/css/navBar.css
@@ -49,7 +49,7 @@ body.dark {
     top: 0;
     left: 0;
     height: 100%;
-    width: 250px;
+    width: 275px;
     padding: 10px 14px;
     background: var(--sidebar-color);
     transition: var(--tran-05);
@@ -126,6 +126,11 @@ header .image-text .name {
 header .image-text .profession {
     font-size: 16px;
     margin-top: -2px;
+    display: block;
+}
+header .image-text .tipousuario {
+    font-size: 12px;
+    margin-top: -4px;
     display: block;
 }
 
