--- a/act_Application/Views/ActTransacciones/Edit.cshtml
+++ b/act_Application/Views/ActTransacciones/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>ActTransaccione</h4>
+<h1>Editar Transacciones</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,14 +22,11 @@
                 <span asp-validation-for="IdUser" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input class="btn" type="submit" value="Save"/>
+                <a class="btn-return" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
