--- a/act_Application/Views/ActAportaciones/Index.cshtml
+++ b/act_Application/Views/ActAportaciones/Index.cshtml
@@ -8,57 +8,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/tabla.css" />
 </head>
-<h1>Aportaciones</h1>
 
-<p>
-    <a class="button create" asp-action="Create">Crear Nuevo Registro</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Valor
-            </th>
-            <th>
-                Id del Usuario
-            </th>
-            <th>
-                Fecha de la Aportacion
-            </th>
-            <th>
-                Aprobacion
-            </th>
-            <th>
-                Captura de Pantalla
-            </th>
-            <th>
-                Acciones
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdUser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaAportacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Aprobacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CapturaPantalla)
-            </td>
-            <td>
-                    <a class ="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                    <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="content-text">
+
+    <h1>Aportaciones</h1>
+
+    <p>
+        <a class="button create" asp-action="Create">Crear Nuevo Registro</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Valor
+                </th>
+                <th>
+                    Id del Usuario
+                </th>
+                <th>
+                    Fecha de la Aportacion
+                </th>
+                <th>
+                    Aprobacion
+                </th>
+                <th>
+                    Captura de Pantalla
+                </th>
+                <th>
+                    Acciones
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Valor)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdUser)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FechaAportacion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Aprobacion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CapturaPantalla)
+                    </td>
+                    <td>
+                        <a class="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
