--- a/act_Application/Views/ActTransacciones/Index.cshtml
+++ b/act_Application/Views/ActTransacciones/Index.cshtml
@@ -8,39 +8,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/tabla.css" />
 </head>
-<h1>Transacciones</h1>
 
-<p>
-    <a class="button create" asp-action="Create">Crear nuevo Registro</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Razon
-            </th>
-            <th>
-                Id del Usuario
-            </th>
-            <th>
-                Accion
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Razon)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdUser)
-            </td>
-            <td>
-                    <a class="button edit" asp-action="Edit" asp-route-id="@item.Id" >Editar</a>
-                    <a class="button delete" asp-action="Delete" asp-route-id="@item.Id" >Eliminar</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="content-text">
+    <h1>Transacciones</h1>
+
+    <p>
+        <a class="button create" asp-action="Create">Crear nuevo Registro</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Razon
+                </th>
+                <th>
+                    Id del Usuario
+                </th>
+                <th>
+                    Accion
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Razon)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IdUser)
+                    </td>
+                    <td>
+                        <a class="button edit" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                        <a class="button delete" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
+
